--- a/RequestsandLimits1.yml
+++ b/RequestsandLimits1.yml
@@ -11,9 +11,9 @@ spec:
       image: httpd
       resources:
         requests:
-	  cpu: "100m"
-	  memory: "64Mi"
-	limits:
-	  cpu: "200m"
-	  memory: "128Mi"
+          cpu: 200m
+          memory: 64Mi
+        limits:
+          cpu: 500m
+          memory: 128Mi
 ...
