--- a/RequestsandLimits2.yml
+++ b/RequestsandLimits2.yml
@@ -1,22 +1,29 @@
 ---
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: nginx-pod
+  name: httpd-deployment
   labels:
-    app: proxy
+    app: webserver
 spec:
-  containers:
-    - name: mynginx
-      image: nginx
-      ports:
-        - containerPort: 80
-          hostPort: 8080
-      resources:
-        requests:
-          cpu: 100m
-          memory: 64Mi
-        limits:
-          cpu: 200m
-          memory: 128Mi
+  replicas: 3
+  selector:
+    matchLabels:
+      app: webserver
+  template:
+    metadata:
+      name: httpd-pod
+      labels:
+        app: webserver
+    spec:
+      containers:
+        - name: myhttpd
+          image: httpd
+          resources:
+            requests:
+              cpu: 100m
+              memory: 64Mi
+            limits:
+              cpu: 200m
+              memory: 128Mi
 ...
