--- a/project/redis-app-service.yml
+++ b/project/redis-app-service.yml
@@ -7,7 +7,7 @@ metadata:
     author: intelliqit
 spec:
   type: ClusterIP
-  port:
+  ports:
     - targetPort: 6379
       port: 6379
   selector:
