--- a/project/postgres-app-deployment.yml
+++ b/project/postgres-app-deployment.yml
@@ -21,7 +21,7 @@ spec:
         - name: postgres-app
           image: postgres
           env:
-            - name: POSTGRES_PASWORD
+            - name: POSTGRES_PASSWORD
               value: intelliqit
             - name: POSTGRES_USER
               value: myuser
