--- a/StorageClass/Storageclass.yml
+++ b/StorageClass/Storageclass.yml
@@ -1,11 +1,9 @@
----
 apiVersion: storage.k8s.io/v1
-kind: StorageClass 
+kind: StorageClass
 metadata:
-  name: my-storageclass
-provisioner: kuberentes.io/azure-disk
+  name: premium-retain-waitforconsumer
+provisioner: kubernetes.io/azure-disk
 parameters:
   storageaccounttype: Premium_LRS
 reclaimPolicy: Retain
 volumeBindingMode: WaitForFirstConsumer
-...
