--- a/StorageClass/Storageclass-pvc.yml
+++ b/StorageClass/Storageclass-pvc.yml
@@ -1,4 +1,3 @@
----
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -6,8 +5,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: my-storageclass
+  storageClassName: premium-retain-waitforconsumer
   resources:
-   requests:
-    storage: 5Gi
-...
+    requests:
+      storage: 3Gi
