--- a/StorageClass/mysql-deployment-storageclass.yml
+++ b/StorageClass/mysql-deployment-storageclass.yml
@@ -1,36 +1,37 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mysql
 spec:
   replicas: 1
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       app: mysql
   template:
     metadata:
-      name: mysql
       labels:
         app: mysql
     spec:
       containers:
-       - name: mysql
-         image: mysql
-         env:
-          - name: MYSQL_ROOT_PASSWORD
-            value: intelliqit
-          - name: MYSQL_DATABASE
-            value: mydatabase
-          - name: MYSQL_USER
-            value: myuser
-          - name: MYSQL_PASSWORD
-            value: mypassword
-         volumeMounts:
-          - name: mysql-volume
-            mountPath:  /var/lib/mysql
+      - name: mysql
+        image: mysql:8.0
+        env:
+        - name: MYSQL_ROOT_PASSWORD
+          value: my-secret-pw
+        - name: MYSQL_DATABASE
+          value: mydatabase
+        - name: MYSQL_USER
+          value: myuser
+        - name: MYSQL_PASSWORD
+          value: mypassword
+        ports:
+        - containerPort: 3306
+        volumeMounts:
+        - name: mysql-persistent-storage
+          mountPath: /var/lib/mysql
       volumes:
-       - name: mysql-volume
-         persistentVolumeClaim:
-           claimName: my-pvc
-
+      - name: mysql-persistent-storage
+        persistentVolumeClaim:
+          claimName: my-pvc
